# jepa-operational-vision

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  pyproject.toml
docs/: blog_outline.md  linkedin_post.md
outputs/crop_run_20260517_175748/: embedding_projection.csv  per_class.csv  per_degradation.csv  report.json  summary.csv
outputs/crop_run_20260517_204504/: per_class.csv  per_degradation.csv  report.json  summary.csv
pages/: embedding_space.py
src/: __init__.py  benchmark_similarity.py  bulk_eval.py  context_analysis.py  crop_robustness.py  degradation.py  embedding_plot.py  extract_embeddings.py  ijepa_localization.py  jepa_adapter.py  obstacle_dataset.py  prototypes.py  small_head.py  utils.py  visualization.py
