[project]
name = "jepa-demo"
version = "0.1.0"
description = "JEPA-demo: exploring practical JEPA pipelines for operational AI systems."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "datasets>=2.19.0",
  "transformers>=4.41.0",
  "torch==2.5.1+cpu",
  "torchvision==0.20.1+cpu",
  "pandas>=2.2.0",
  "pyarrow>=15.0.0",
  "scikit-learn>=1.4.0",
  "streamlit>=1.35.0",
  "pillow>=10.0.0",
  "numpy>=1.26.0",
  "tqdm>=4.66.0",
  "plotly>=5.22.0",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.4.0",
]

[tool.uv]
package = false

[tool.uv.sources]
torch = { index = "pytorch-cpu" }
torchvision = { index = "pytorch-cpu" }

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.ruff]
line-length = 100
target-version = "py311"
